Merged r13419,r13420
svn merge -c 13419,13420 svn+ssh://svn.dcache.org/data/svn/dCache/trunk